--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "Artificial Intelligence Course Final Project, HUT",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=development postcss ./css/tailwind.css -o ./css/main.css -w",
-    "build": "NODE_ENV=production postcss ./css/tailwind.css -o ./css/main.css"
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack",
+    "serve": "webpack-dev-server"
   },
   "author": "Farhad Uneci",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.2",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.1.4"
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "postcss": "^8.3.4",
+    "postcss-loader": "^6.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.1.4",
+    "webpack": "^5.39.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
