--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Artificial Intelligence Course Final Project, HUT",
   "main": "index.js",
   "scripts": {
-    "build:dev": "webpack --mode=development",
+    "build:dev": "webpack --mode=development -w",
     "build:prod": "webpack",
-    "serve": "webpack-dev-server"
+    "serve": "live-server dist/"
   },
   "author": "Farhad Uneci",
   "license": "MIT",
@@ -14,15 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
+    "html-webpack-plugin": "^5.3.1",
+    "live-server": "^1.2.1",
     "postcss": "^8.3.4",
     "postcss-loader": "^6.1.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.1.4",
     "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.7.2"
   }
 }
